--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "json-inflector": "^1.1.0",
     "querystring": "0.2.0",
     "raven": "^1.1.2",
-    "type-is": "^1.6.14"
+    "type-is": "^1.6.14",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
