corrected example config

--- a/services/halo4/config.json
+++ b/services/halo4/config.json
@@ -1,11 +1,8 @@
 {
 	"addr": "",
-	"mongo": {
-		"host": "",
-		"database": "",
-		"username": "",
-		"password": ""
-	},
+	"mongo": "",
 	"authUrl": "",
-	"authKey": ""
+	"xboxliveUrl": "",
+	"authKey": "",
+	"xboxliveKey": ""
 }
