Added caching of auth tokens to a mongodb - future work auto-grab tokens every 10 minutes

--- a/config.json
+++ b/config.json
@@ -4,8 +4,10 @@
 		"account": "your_account@outlook.com",
 		"password": "your_password"
 	},
-	"xboxLive": {
+	"xboxlive": {
 		"account": "your_account@outlook.com",
 		"password": "your_password"
-	}
+	},
+	"mongodb": "mongo_connection_string",
+	"hashingSalt": "secure_hashing_salt"
 }
