--- a/package.json
+++ b/package.json
@@ -15,27 +15,32 @@
   "dependencies": {
     "@branch-app/log": "^0.9.1",
     "@branch-app/log-sentry": "^0.5.2",
-    "babel-polyfill": "^6.16.0",
-    "body-parser": "^1.16.1",
-    "express": "^4.14.0",
+    "babel-polyfill": "^6.23.0",
+    "body-parser": "^1.17.2",
+    "camelcase": "^4.1.0",
+    "camelcase-keys": "^4.1.0",
+    "express": "^4.15.3",
     "express-promise-router": "^1.1.1",
     "json-client": "^0.8.4",
     "json-inflector": "^1.1.0",
+    "moment": "^2.18.1",
+    "mongo-uuid": "^1.0.0",
+    "mongodb": "^2.2.29",
     "querystring": "0.2.0",
-    "raven": "^1.1.2",
-    "type-is": "^1.6.14",
-    "moment": "^2.18.1"
+    "raven": "^1.2.1",
+    "snakeize": "^0.1.0",
+    "type-is": "^1.6.15",
+    "zombie": "5.0.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^6.24.1",
     "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "nodemon": "^1.11.0",
-    "zombie": "5.0.5"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.11.0"
   },
   "babel": {
     "presets": [
