--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "camelcase-keys": "^4.1.0",
     "express": "^4.15.3",
     "express-promise-router": "^1.1.1",
+    "is-my-json-valid": "^2.16.0",
     "json-client": "^0.8.4",
     "json-inflector": "^1.1.0",
     "moment": "^2.18.1",
