added xboxlive start file

--- a/services/xboxlive/config.json
+++ b/services/xboxlive/config.json
@@ -1,11 +1,6 @@
 {
 	"addr": "",
-	"mongo": {
-		"host": "",
-		"database": "",
-		"username": "",
-		"password": ""
-	},
+	"mongo": "",
 	"authUrl": "",
 	"authKey": ""
 }
