--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@branch-app/log": "^0.9.1",
     "@branch-app/log-sentry": "^0.5.2",
     "babel-polyfill": "^6.23.0",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "bootstrap": "3.3.7",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "express-hbs": "^1.0.4",
     "express-promise-router": "^1.1.1",
     "humanize-duration": "^3.10.0",
-    "jquery": "3.1.1",
+    "jquery": "3.2.1",
     "json-client": "^0.8.4",
     "moment-timezone": "^0.5.13",
     "number_helpers": "^0.1.1",
@@ -43,23 +44,23 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babelify": "^7.3.0",
     "bower": "^1.8.0",
-    "browserify": "^14.3.0",
+    "browserify": "^14.4.0",
     "browserify-shim": "^3.8.14",
-    "eslint": "^3.19.0",
+    "eslint": "^4.1.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "^2.2.0",
-    "glob": "^7.1.1",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.6.0",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
     "nodemon": "^1.11.0",
     "vinyl-buffer": "^1.0.0",
