--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "rm -rf ./build && babel ./src --out-dir=build --source-maps --copy-files --quiet",
     "debug": "npm run transpile && nodemon --exec babel-node -- src/boot/debug.js",
     "start": "node ./build/boot/start.js",
+    "install": "bower install",
     "transpile": "gulp"
   },
   "dependencies": {
@@ -31,7 +32,6 @@
     "humanize-duration": "^3.10.0",
     "jquery": "3.2.1",
     "json-client": "^0.8.4",
-    "typed.js": "^2.0.4",
     "moment-timezone": "^0.5.13",
     "number_helpers": "^0.1.1",
     "pluralize": "^5.0.0",
