--- a/js/apps/service-auth/package.json
+++ b/js/apps/service-auth/package.json
@@ -2,10 +2,6 @@
   "name": "service-auth",
   "version": "1.0.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/thetree/service-auth.git"
-  },
   "scripts": {
     "debug": "nodemon --exec babel-node -- src/boot/debug.js",
     "start": "node build/boot/start.js",
@@ -13,25 +9,25 @@
     "test": "echo \"no tests yet\" && exit 0"
   },
   "dependencies": {
-    "@branch-app/log": "^0.9.1",
-    "@branch-app/log-sentry": "^0.5.2",
-    "babel-polyfill": "^6.23.0",
-    "body-parser": "^1.17.2",
+    "@branch-app/log": "file:../../packages/log-node",
+    "@branch-app/log-sentry": "file:../../packages/log-sentry-node",
+    "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.2",
     "camelcase": "^4.1.0",
-    "camelcase-keys": "^4.1.0",
+    "camelcase-keys": "^4.2.0",
     "express": "^4.15.3",
     "express-promise-router": "^1.1.1",
-    "is-my-json-valid": "^2.16.0",
-    "json-client": "^0.8.4",
+    "is-my-json-valid": "^2.17.2",
+    "json-client": "^0.8.5",
     "json-inflector": "^1.1.0",
-    "moment": "^2.18.1",
+    "moment": "^2.21.0",
     "mongo-uuid": "^1.0.0",
     "mongodb": "^2.2.29",
     "querystring": "0.2.0",
     "raven": "^1.2.1",
     "snakeize": "^0.1.0",
-    "type-is": "^1.6.15",
-    "zombie": "5.0.5"
+    "type-is": "^1.6.16",
+    "zombie": "5.0.8"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -41,7 +37,7 @@
     "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.17.2"
   },
   "babel": {
     "presets": [
