--- a/js/apps/service-auth/package.json
+++ b/js/apps/service-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "service-auth",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "debug": "nodemon --exec babel-node -- src/boot/debug.js",
@@ -11,18 +11,16 @@
   "dependencies": {
     "@branch-app/log": "file:../../packages/log-node",
     "@branch-app/log-sentry": "file:../../packages/log-sentry-node",
+    "@branch-app/redis-client": "file:../../packages/redis-client",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
-    "camelcase": "^4.1.0",
-    "camelcase-keys": "^4.2.0",
+    "camelize": "^1.0.0",
     "express": "^4.15.3",
-    "express-promise-router": "^1.1.1",
+    "express-promise-router": "^3.0.1",
     "is-my-json-valid": "^2.17.2",
     "json-client": "^0.8.5",
     "json-inflector": "^1.1.0",
     "moment": "^2.21.0",
-    "mongo-uuid": "^1.0.0",
-    "mongodb": "^2.2.29",
     "querystring": "0.2.0",
     "raven": "^1.2.1",
     "snakeize": "^0.1.0",
@@ -30,7 +28,7 @@
     "zombie": "5.0.8"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
