--- a/js/packages/log-sentry-node/package.json
+++ b/js/packages/log-sentry-node/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@branch-app/log-sentry",
+	"name": "log-sentry",
 	"version": "0.0.0",
 	"private": false,
 
@@ -17,6 +17,6 @@
 		"coveralls": "^3.0.0",
 		"istanbul": "^0.4.5",
 		"tape": "^4.9.0",
-		"test-console": "^1.0.0"
+		"test-console": "^1.1.0"
 	}
 }
