--- a/js/apps/service-auth/package.json
+++ b/js/apps/service-auth/package.json
@@ -9,24 +9,20 @@
     "test": "echo \"no tests yet\" && exit 0"
   },
   "dependencies": {
-    "branch-log": "file:../../packages/branch-log",
-    "branch-log-sentry": "file:../../packages/branch-log-sentry",
-    "redis-client": "file:../../packages/redis-client",
-    "version-routing": "file:../../packages/version-routing",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "camelize": "^1.0.0",
     "express": "^4.16.3",
-    "express-promise-router": "^3.0.1",
+    "express-promise-router": "^3.0.3",
     "is-my-json-valid": "^2.17.2",
-    "json-client": "^0.8.5",
+    "json-client": "^0.9.3",
     "json-inflector": "^1.1.0",
-    "moment": "^2.21.0",
+    "moment": "^2.22.2",
     "querystring": "0.2.0",
     "raven": "^1.2.1",
     "snakeize": "^0.1.0",
     "type-is": "^1.6.16",
-    "zombie": "5.0.8"
+    "zombie": "6.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -34,13 +30,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.18.3"
   },
   "babel": {
     "presets": [
-      "es2015",
+      "env",
       "stage-2"
     ],
     "plugins": [
