--- a/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
+++ b/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>Branch.Apps.ServiceIdentity</RootNamespace>
 	</PropertyGroup>
@@ -8,7 +8,7 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\packages\Apollo\Apollo.csproj" />
-		<ProjectReference Include="..\..\packages\models\Models.csproj" />
+		<ProjectReference Include="..\..\Packages\Apollo\Apollo.csproj" />
+		<ProjectReference Include="..\..\Packages\Models\Models.csproj" />
 	</ItemGroup>
 </Project>
