Added Contracts package, and base xbox live models

--- a/dotnet/Clients/Auth/Auth.csproj
+++ b/dotnet/Clients/Auth/Auth.csproj
@@ -7,6 +7,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Branch\Branch.csproj" />
-    <ProjectReference Include="..\..\Packages\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\..\Packages\Contracts\Contracts.csproj" />
   </ItemGroup>
 </Project>
