--- a/js/apps/web-placeholder/package.json
+++ b/js/apps/web-placeholder/package.json
@@ -16,7 +16,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts-ts build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts-ts test --env=jsdom",
+    "test": "react-scripts-ts test --env=jsdom --watchAll",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
