--- a/js/apps/web-placeholder/package.json
+++ b/js/apps/web-placeholder/package.json
@@ -7,13 +7,15 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0"
+    "react-scripts-ts": "2.17.0",
+    "serve": "^10.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts-ts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "debug-js": "react-scripts-ts start",
+    "debug": "npm-run-all -p watch-css start-js",
+    "start": "serve ./build",
     "build-js": "react-scripts-ts build",
     "build": "npm-run-all build-css build-js",
     "test": "echo \"no tests yet\" && exit 0",
