--- a/js/apps/web-home/package.json
+++ b/js/apps/web-home/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/memoize-one": "^3.1.1",
+    "@types/numeral": "^0.0.25",
     "@types/react-router-dom": "^4.3.0",
     "@types/reactstrap": "^6.0.2",
     "classnames": "^2.2.6",
     "crpc": "^0.2.2",
+    "memoize-one": "^4.0.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
+    "numeral": "^2.0.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -29,7 +33,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "debug-js": "react-scripts-ts start",
     "debug": "npm-run-all -p watch-css debug-js",
-    "start": "serve ./build",
+    "start": "serve --single ./build",
     "build-js": "react-scripts-ts build",
     "build": "npm-run-all build-css build-js",
     "test": "echo \"no tests yet\" && exit 0",
