Added paths to config

--- a/js/apps/web-home/tsconfig.json
+++ b/js/apps/web-home/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
+    "paths": {
+      "~/*": ["src/*"]
+    },
     "outDir": "build",
     "module": "esnext",
     "target": "es5",
