--- a/dotnet/Dockerfile
+++ b/dotnet/Dockerfile
@@ -9,9 +9,9 @@ COPY ./Clients ./Clients
 COPY ./Packages ./Packages
 COPY ./Tests ./Tests
 RUN dotnet restore
-RUN dotnet build --no-restore -c Release
+RUN dotnet build --no-restore -c Release -r alpine-x64
 RUN dotnet test ./Tests/Clients/JsonTests --no-build -c Release
-RUN ls ./Apps | parallel dotnet publish -o Build -c Release --no-build ./Apps/{}
+RUN ls ./Apps | parallel dotnet publish -o Build -c Release -r alpine-x64 --no-build ./Apps/{}
 RUN ls ./Apps | parallel mkdir -p ./Build/{}
 RUN ls ./Apps | parallel cp -R ./Apps/{}/Build ./Build/{}
 
