--- a/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
+++ b/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>Branch.Apps.ServiceIdentity</RootNamespace>
+		<RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
 	</PropertyGroup>
 	<ItemGroup>
 		<Folder Include="wwwroot\" />
