--- a/dotnet/Packages/Apollo/Apollo.csproj
+++ b/dotnet/Packages/Apollo/Apollo.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
     <RootNamespace>Apollo</RootNamespace>
+    <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="cuvva-ksuid" Version="1.1.0" />
