--- a/dotnet/Packages/Exceptions/Exceptions.csproj
+++ b/dotnet/Packages/Exceptions/Exceptions.csproj
@@ -3,5 +3,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <RootNamespace>Branch.Packages.Exceptions</RootNamespace>
+    <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 </Project>
