--- a/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
+++ b/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
+		<OutputType>Exe</OutputType>
 		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>Branch.Apps.ServiceIdentity</RootNamespace>
 		<RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
+		<RuntimeFrameworkVersion>2.1.4</RuntimeFrameworkVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<Folder Include="wwwroot\" />
