--- a/dotnet/Packages/Apollo/Apollo.csproj
+++ b/dotnet/Packages/Apollo/Apollo.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.10" />
-    <PackageReference Include="Sentry.AspNetCore" Version="0.0.1-preview5" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.0.0-rc2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
   </ItemGroup>
 </Project>
