Update how branch responses work

--- a/dotnet/Packages/Contracts/Contracts.csproj
+++ b/dotnet/Packages/Contracts/Contracts.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Enums\Enums.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 </Project>
