--- a/dotnet/packages/models/Models.csproj
+++ b/dotnet/packages/models/Models.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Enums\Enums.csproj" />
+    <ProjectReference Include="..\Converters\Converters.csproj" />
   </ItemGroup>
 </Project>
