--- a/js/apps/web-placeholder/package.json
+++ b/js/apps/web-placeholder/package.json
@@ -1,31 +1,11 @@
 {
   "name": "web-placeholder",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.3.3",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-scripts-ts": "2.17.0",
-    "serve": "^10.0.1"
+    "serve": "^10.0.2"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "debug-js": "react-scripts-ts start",
-    "debug": "npm-run-all -p watch-css debug-js",
-    "start": "serve ./build",
-    "build-js": "react-scripts-ts build",
-    "build": "npm-run-all build-css build-js",
-    "test": "echo \"no tests yet\" && exit 0",
-    "eject": "react-scripts-ts eject"
-  },
-  "devDependencies": {
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.10.0",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "typescript": "^3.0.3"
+    "start": "serve"
   }
 }
