--- a/js/apps/web-placeholder/package.json
+++ b/js/apps/web-placeholder/package.json
@@ -6,6 +6,8 @@
     "serve": "^10.0.2"
   },
   "scripts": {
-    "start": "serve"
+    "build": "echo \"Error: no build specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve ./data"
   }
 }
