Exception handling updates to jsonclient

--- a/dotnet/Clients/Json/Json.csproj
+++ b/dotnet/Clients/Json/Json.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Packages\Exceptions\Exceptions.csproj" />
+    <ProjectReference Include="..\..\Packages\Converters\Converters.csproj" />
   </ItemGroup>
 
 </Project>
