--- a/dotnet/Packages/Apollo/Apollo.csproj
+++ b/dotnet/Packages/Apollo/Apollo.csproj
@@ -17,5 +17,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
+    <ProjectReference Include="..\Converters\Converters.csproj" />
   </ItemGroup>
 </Project>
