--- a/dotnet/Packages/Exceptions/Exceptions.csproj
+++ b/dotnet/Packages/Exceptions/Exceptions.csproj
@@ -5,4 +5,7 @@
     <RootNamespace>Branch.Packages.Exceptions</RootNamespace>
     <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
 </Project>
