--- a/dotnet/Packages/Converters/Converters.csproj
+++ b/dotnet/Packages/Converters/Converters.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Extensions\Extensions.csproj" />
+    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
   </ItemGroup>
 </Project>
