--- a/js/react-apps/web-home/package.json
+++ b/js/react-apps/web-home/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "connected-react-router": "^4.5.0",
     "crpc": "^0.2.2",
     "memoize-one": "^4.0.2",
     "node-sass-chokidar": "^1.3.4",
@@ -12,6 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
@@ -40,13 +42,14 @@
     "@types/memoize-one": "^3.1.1",
     "@types/node": "^10.12.0",
     "@types/numeral": "^0.0.25",
+    "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react": "^16.4.11",
     "@types/reactstrap": "^6.4.2",
     "typescript": "^3.1.3"
   },
   "resolutions": {
-    "@types/react": "^16.4.11"
+    "**/@types/react": "16.4.14"
   }
 }
