--- a/js/react-apps/web-home/tsconfig.json
+++ b/js/react-apps/web-home/tsconfig.json
@@ -19,9 +19,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-
-    "skipLibCheck": true // REMOVE THIS LATER
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
