--- a/js/apps/service-auth/package.json
+++ b/js/apps/service-auth/package.json
@@ -9,22 +9,21 @@
     "test": "echo \"no tests yet\" && exit 0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "camelize": "^1.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "is-my-json-valid": "^2.19.0",
     "json-client": "^0.9.3",
     "json-inflector": "^1.1.0",
-    "moment": "^2.22.2",
+    "moment": "^2.23.0",
+    "puppeteer": "^1.11.0",
     "querystring": "0.2.0",
     "raven": "^1.2.1",
     "snakeize": "^0.1.0",
-    "type-is": "^1.6.16",
-    "zombie": "5.0.8"
+    "type-is": "^1.6.16"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.9"
   }
 }
