--- a/dotnet/Clients/Token/Token.csproj
+++ b/dotnet/Clients/Token/Token.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <RootNamespace>Branch.Clients.Auth</RootNamespace>
+    <RootNamespace>Branch.Clients.Token</RootNamespace>
     <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
