--- a/js/react/package.json
+++ b/js/react/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.0.0",
     "crpc": "^0.2.2",
+    "idb": "^2.1.3",
     "memoize-one": "^5.0.0",
     "node-sass-chokidar": "^1.3.4",
     "numeral": "^2.0.6",
@@ -27,6 +28,7 @@
     "styled-components": "^4.1.3",
     "typed.js": "^2.0.9",
     "typesafe-actions": "^2.1.1",
+    "uuid": "^3.3.2",
     "window.requestanimationframe": "^1.0.1"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^6.4.3",
     "@types/styled-components": "^4.1.4",
+    "@types/uuid": "^3.4.4",
     "react-scripts": "^2.1.2",
     "typescript": "^3.2.2"
   },
