--- a/dotnet/Apps/ServiceXboxLive/ServiceXboxLive.csproj
+++ b/dotnet/Apps/ServiceXboxLive/ServiceXboxLive.csproj
@@ -13,7 +13,9 @@
 		<Content Update="config.*.json" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\Clients\Cache\Cache.csproj" />
 		<ProjectReference Include="..\..\Clients\Token\Token.csproj" />
+		<ProjectReference Include="..\..\Clients\XboxLive\XboxLive.csproj" />
 		<ProjectReference Include="..\..\Packages\Apollo\Apollo.csproj" />
 		<ProjectReference Include="..\..\Packages\Models\Models.csproj" />
 		<ProjectReference Include="..\..\Packages\Contracts\Contracts.csproj" />
