--- a/dotnet/Clients/Branch/Branch.csproj
+++ b/dotnet/Clients/Branch/Branch.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cache\Cache.csproj" />
     <ProjectReference Include="..\Json\Json.csproj" />
     <ProjectReference Include="..\..\Packages\Exceptions\Exceptions.csproj" />
   </ItemGroup>
