--- a/dotnet/Packages/Crpc/Crpc.csproj
+++ b/dotnet/Packages/Crpc/Crpc.csproj
@@ -16,4 +16,7 @@
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.11" />
     <PackageReference Include="Sentry.AspNetCore" Version="1.1.2" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bae\Cher.csproj" />
+  </ItemGroup>
 </Project>
