--- a/dotnet/Packages/Crpc/Crpc.csproj
+++ b/dotnet/Packages/Crpc/Crpc.csproj
@@ -17,6 +17,6 @@
     <PackageReference Include="Sentry.AspNetCore" Version="1.1.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bae\Cher.csproj" />
+    <ProjectReference Include="..\Bae\Bae.csproj" />
   </ItemGroup>
 </Project>
