Use Bae instead of Branch Exceptions

--- a/dotnet/Packages/Converters/Converters.csproj
+++ b/dotnet/Packages/Converters/Converters.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Extensions\Extensions.csproj" />
-    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
+    <ProjectReference Include="..\Bae\Bae.csproj" />
   </ItemGroup>
 </Project>
