--- a/dotnet/Clients/Json/Json.csproj
+++ b/dotnet/Clients/Json/Json.csproj
@@ -8,12 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="System.Net.Http" Version="4.3.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Packages\Exceptions\Exceptions.csproj" />
+    <ProjectReference Include="..\..\Packages\Bae\Bae.csproj" />
     <ProjectReference Include="..\..\Packages\Converters\Converters.csproj" />
     <ProjectReference Include="..\Http\Http.csproj" />
   </ItemGroup>
