Setup KSUID singleton environment on CRPC

--- a/dotnet/Packages/Crpc/Crpc.csproj
+++ b/dotnet/Packages/Crpc/Crpc.csproj
@@ -6,6 +6,7 @@
     <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="cuvva-ksuid" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
