--- a/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
+++ b/dotnet/Apps/ServiceIdentity/ServiceIdentity.csproj
@@ -15,10 +15,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\Clients\Token\Token.csproj" />
 		<ProjectReference Include="..\..\Clients\XboxLive\XboxLive.csproj" />
-		<ProjectReference Include="..\..\Packages\Apollo\Apollo.csproj" />
-		<ProjectReference Include="..\..\Packages\Models\Models.csproj" />
 		<ProjectReference Include="..\..\Packages\Contracts\Contracts.csproj" />
+		<ProjectReference Include="..\..\Packages\Crpc\Crpc.csproj" />
 		<ProjectReference Include="..\..\Packages\Enums\Enums.csproj" />
 		<ProjectReference Include="..\..\Packages\Extensions\Extensions.csproj" />
+		<ProjectReference Include="..\..\Packages\Models\Models.csproj" />
 	</ItemGroup>
 </Project>
