Updated Halo4 service to use CRPC

--- a/dotnet/Apps/ServiceHalo4/ServiceHalo4.csproj
+++ b/dotnet/Apps/ServiceHalo4/ServiceHalo4.csproj
@@ -14,10 +14,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Clients\Cache\Cache.csproj" />
-		<ProjectReference Include="..\..\Clients\Token\Token.csproj" />
 		<ProjectReference Include="..\..\Clients\Identity\Identity.csproj" />
-		<ProjectReference Include="..\..\Packages\Apollo\Apollo.csproj" />
+		<ProjectReference Include="..\..\Clients\S3\S3.csproj" />
+		<ProjectReference Include="..\..\Clients\Token\Token.csproj" />
 		<ProjectReference Include="..\..\Packages\Contracts\Contracts.csproj" />
+		<ProjectReference Include="..\..\Packages\Crpc\Crpc.csproj" />
 		<ProjectReference Include="..\..\Packages\Crypto\Crypto.csproj" />
 		<ProjectReference Include="..\..\Packages\Enums\Enums.csproj" />
 		<ProjectReference Include="..\..\Packages\Extensions\Extensions.csproj" />
