--- a/dotnet/Apps/ServiceHalo2/ServiceHalo2.csproj
+++ b/dotnet/Apps/ServiceHalo2/ServiceHalo2.csproj
@@ -23,6 +23,7 @@
 		<ProjectReference Include="..\..\Packages\Extensions\Extensions.csproj" />
 		<ProjectReference Include="..\..\Packages\Models\Models.csproj" />
 		<ProjectReference Include="..\..\Clients\Postgres\Postgres.csproj" />
+		<ProjectReference Include="..\..\Clients\Json\Json.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Automapper" Version="8.1.0" />
