--- a/dotnet/Packages/Extensions/Extensions.csproj
+++ b/dotnet/Packages/Extensions/Extensions.csproj
@@ -5,4 +5,7 @@
     <RootNamespace>Branch.Packages.Extensions</RootNamespace>
     <RuntimeIdentifiers>osx-x64;alpine-x64;linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+  </ItemGroup>
 </Project>
